Bug 19516 - place plugin moves windows offscreen
Summary: place plugin moves windows offscreen
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/compiz (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: David Reveman
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-11 12:39 UTC by Jarrod Johnson
Modified: 2009-02-05 01:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Jarrod Johnson 2009-01-11 12:39:58 UTC
When the upper left corner is either too far to the left or too far up, a window will be moved off screen in compiz 0.7.8.

To reproduce:
-Open firefox
-Move firefox such that the left edge of the window is off screen.
-At a cli, type firefox http://www.freedosktop.org/
-The firefox window appears to disappear, or move mostly offscreen, or in general move for no apparent reason to move it when it already has a place..

This doesn't happen if Place is disabled.  Readily reproducible with Fedora10 and Ubuntu 8.10 compiz packages.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.