Fix window resize validation. - Don't do any validation if window geometry wasn't actually changed. - Fix calculations for windows that had the left and/or top edges offscreen before the validation. Reference: http://bugs.freedesktop.org/show_bug.cgi?id=19516