plugins/place.c
@@ -1280,6 +1280,9 @@ placeValidateWindowResizeRequest (CompWindow     *w,
     WRAP (ps, s, validateWindowResizeRequest,
 	  placeValidateWindowResizeRequest);
 
+    if (*mask == 0)
+	return;
+
     if (source == ClientTypePager)
 	return;
 
@@ -1307,12 +1310,7 @@ placeValidateWindowResizeRequest (CompWindow     *w,
        sizes as we don't need to validate movements to other viewports;
        we are only interested in inner-viewport movements */
     x = xwc->x % s->width;
-    if (x < 0)
-	x += s->width;
-
     y = xwc->y % s->height;
-    if (y < 0)
-	y += s->height;
 
     left   = x - w->input.left;
     right  = x + xwc->width + w->input.right;
